stoat/src/snapshots/stoat__test_harness__review_cursor_after_motions.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: normal
size: 80x10
---
[0m[38;2;229;192;123mtest.rs --- 1/1 --- rust[0m               [0m[38;2;99;109;131m│[0m
[0m[1m[38;2;86;182;194m│[0m[38;2;99;109;131m   1 [0m[38;2;250;250;250mfn main() {[0m                      [0m[38;2;99;109;131m│[0m[1m[38;2;86;182;194m│[0m[38;2;99;109;131m   1 [0m[38;2;250;250;250mfn main() {[0m
[0m[1m[38;2;86;182;194m│[0m[38;2;99;109;131m   2 [0m[38;2;250;250;250m    let x = [0m[38;2;224;108;117m1[0m[38;2;250;250;250m;[0m                   [0m[38;2;99;109;131m│[0m[1m[38;2;86;182;194m│[0m[38;2;99;109;131m   2 [0m[38;2;250;250;250m    le[0m[7m[38;2;250;250;250mt[0m[38;2;250;250;250m x = [0m[38;2;152;195;121m2[0m[38;2;250;250;250m;[0m
[0m[1m[38;2;86;182;194m│[0m[38;2;99;109;131m   3 [0m[38;2;250;250;250m}[0m                                [0m[38;2;99;109;131m│[0m[1m[38;2;86;182;194m│[0m[38;2;99;109;131m   3 [0m[38;2;250;250;250m}[0m





[0m[1m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[1m[38;2;250;250;250m[48;2;99;109;131m (unnamed) [0m[38;2;86;182;194m[48;2;99;109;131m review [0m[38;2;250;250;250m[48;2;99;109;131m[scratch]                                               [0m
